# random_cpp_doesnt_work

./: CMakeLists.txt  README.md
data/stocks_april/: quant_seconds_data_MSFT.csv  quant_seconds_data_NVDA.csv  quant_seconds_data_google.csv
include/backtester/: Backtester.h  DataManager.h  ExecutionSimulator.h  Portfolio.h  Strategy.h
include/common/: Event.h  FillEvent.h  OrderRequest.h  OrderTypes.h  Position.h  Signal.h  Utils.h
include/features/: FeatureCalculator.h
include/models/: DRLInferenceEngine.h  DRLStrategy.h
include/strategies/: LeadLagStrategy.h  MomentumIgnition.h  MovingAverageCrossover.h  OpeningRangeBreakout.h  PairsTrading.h  VWAPReversion.h
src/: Backtester.cpp  DRLStrategy.cpp  DataManager.cpp  DataManager.h  ExecutionSimulator.cpp  FeatureCalculator.cpp  Portfolio.cpp  main.cpp
src/core/: Backtester.h  Portfolio.h
src/strategies/: MovingAverageCrossover.h  Strategy.h
src_old_backup/: main.cpp
src_old_backup/data/: DataManager.cpp  PriceBar.h
